test/parser/function_call.error.4.err
EXPECTED_RPAREN[1012] in test/parser/function_call.error.4.pytch, line 4, character 5:
Error: I was expecting a ')' to indicate the end of this function argument
list, but instead got the end of the file.
   +-------------------------------------------------------------------------+
   | test/parser/function_call.error.4.pytch                                 |
 1 | print(                                                                  |
   |      ^ Note: The beginning of the argument list is here.                |
 2 |   1,                                                                    |
 3 |   2,                                                                    |
 4 |   3,                                                                    |
   |     ^ Error: I was expecting a ')' to indicate the end of this function |
   | argument list, but instead got the end of the file.                     |
   +-------------------------------------------------------------------------+
